--- a/android/res/layout/place_page_banner.xml
+++ b/android/res/layout/place_page_banner.xml
@@ -26,7 +26,7 @@
     android:textColor="?warmGray"
     android:background="?adsActionBackground"
     android:foreground="?clickableBackground"
-    android:visibility="visible"
+    android:visibility="gone"
     tools:text="Заказать"
     tools:visibility="visible"/>
 
@@ -65,6 +65,7 @@
         android:textSize="@dimen/text_size_banner"
         android:textColor="?adsText"
         android:gravity="center"
+        android:visibility="gone"
         android:background="?adsBackground"
         android:text="@string/advertisement"/>
 
