--- a/android/res/layout/activity_splash.xml
+++ b/android/res/layout/activity_splash.xml
@@ -7,6 +7,7 @@
   android:gravity="center">
 
   <ImageView
+    android:id="@+id/iv__logo"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/img_logo"/>
