[andorid] Added animation to CTA button in banner
[android] Changed handling clicks in banner logic

--- a/android/res/layout/place_page_banner.xml
+++ b/android/res/layout/place_page_banner.xml
@@ -10,6 +10,7 @@
   android:paddingTop="@dimen/margin_half"
   android:background="?bannerBackground"
   android:clipToPadding="false"
+  android:clickable="true"
   tools:layout_height="wrap_content">
 
   <TextView
