--- a/android/res/values/themes-base.xml
+++ b/android/res/values/themes-base.xml
@@ -86,7 +86,7 @@
 
     <item name="bannerText">@color/text_banner_color</item>
     <item name="bannerBackground">@color/bg_banner_color</item>
-    <item name="bannerButtonBackground">@color/bg_banner_button_color</item>
+    <item name="bannerButtonBackground">@color/bg_banner_button</item>
     <item name="adsBackground">@drawable/bg_ads</item>
     <item name="adsText">@color/text_ads_color</item>
     <item name="adsActionBackground">@drawable/bg_ads_action</item>
@@ -187,7 +187,7 @@
 
     <item name="bannerText">@color/text_banner_color_night</item>
     <item name="bannerBackground">@color/bg_banner_color_night</item>
-    <item name="bannerButtonBackground">@color/bg_banner_button_color_night</item>
+    <item name="bannerButtonBackground">@color/bg_banner_button_night</item>
     <item name="adsBackground">@drawable/bg_ads_night</item>
     <item name="adsText">@color/text_ads_color_night</item>
     <item name="adsActionBackground">@drawable/bg_ads_action_night</item>
