[android] Use string resources

--- a/android/res/layout/fragment_updater.xml
+++ b/android/res/layout/fragment_updater.xml
@@ -41,7 +41,7 @@
       android:textAppearance="@style/MwmTextAppearance.Body1.Secondary"
       android:layout_gravity="center_horizontal"
       android:gravity="center_horizontal"
-      android:text="Update maps supports information about objects in the current state"/>
+      android:text="@string/update_maps_notice"/>
 
     <FrameLayout
       android:layout_width="match_parent"
