--- a/android/res/layout/fragment_updater.xml
+++ b/android/res/layout/fragment_updater.xml
@@ -70,14 +70,16 @@
     </FrameLayout>
     <TextView
       android:id="@+id/cancel_btn"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="match_parent"
+      android:layout_height="@dimen/height_block_base"
       android:layout_marginLeft="@dimen/margin_base"
       android:layout_marginRight="@dimen/margin_base"
       android:layout_marginBottom="@dimen/margin_base"
       android:textAppearance="@style/MwmTextAppearance.Body1.Secondary"
       android:textColor="?buttonDialogTextColor"
       android:layout_gravity="center_horizontal"
+      android:gravity="center"
+      android:background="?clickableBackground"
       tools:text="Manually update later"/>
   </LinearLayout>
 
