[core][android][ios] tint local ads customers in search results

--- a/android/res/values/themes-attrs.xml
+++ b/android/res/values/themes-attrs.xml
@@ -82,6 +82,8 @@
     <attr name="activeIconBackground" format="reference"/>
 
     <attr name="warmGray" format="color"/>
+
+    <attr name="localAdSearchResBackground" format="color"/>
   </declare-styleable>
 
   <declare-styleable name="ThemeAttrs.NavButtons">
