--- a/android/res/values/colors.xml
+++ b/android/res/values/colors.xml
@@ -27,6 +27,7 @@
   <color name="white_secondary">#B3FFFFFF</color> <!-- 70% white -->
   <color name="white_lightest">#4CFFFFFF</color>  <!-- 50% white -->
   <color name="white_8">#14FFFFFF</color> <!-- 8% white -->
+  <color name="white_12">#1Effffff</color> <!-- 12% white -->
   <color name="white_24">#3DFFFFFF</color> <!-- 24% black -->
   <color name="white_60">#99FFFFFF</color> <!-- 24% black -->
   <color name="warm_gray">#FF999691</color>
@@ -133,6 +134,8 @@
 
   <!-- Search -->
   <color name="search_star_dimmed">#1F000000</color>
+  <color name="search_local_ads_customer_result">@color/bg_banner_color</color>
+  <color name="search_local_ads_customer_result_night">@color/bg_banner_color_night</color>
 
   <!-- What's new -->
   <color name="news_marker_active">#8A000000</color>
@@ -158,11 +161,11 @@
 
   <!-- Banner colors-->
   <color name="bg_banner_color">#FFFFFBF3</color>
-  <color name="bg_banner_color_night">#FF555A5A</color>
+  <color name="bg_banner_color_night">#FF484C50</color>
   <color name="text_banner_color">#28000000</color>
   <color name="text_banner_color_night">#28FFFFFF</color>
   <color name="bg_banner_button">#FFF3EBDA</color>
-  <color name="bg_banner_button_night">#4CFFFAE1</color>
+  <color name="bg_banner_button_night">#FF52565A</color>
   <color name="text_ads_color">#FFFFFBF2</color>
   <color name="text_ads_color_night">#FFFFFBF2</color>
   <color name="banner_action_btn_start_anim_night">#FF888A82</color>
