--- a/android/res/layout/fragment_updater.xml
+++ b/android/res/layout/fragment_updater.xml
@@ -5,7 +5,6 @@
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent">
-
   <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -18,7 +17,6 @@
       android:layout_gravity="center_horizontal"
       android:tag="@string/tag_height_limited"
       android:src="@drawable/wn_autoupdate"/>
-
     <TextView
       android:id="@+id/title"
       android:layout_width="wrap_content"
@@ -30,9 +28,8 @@
       android:layout_gravity="center_horizontal"
       android:gravity="center_horizontal"
       android:fontFamily="@string/robotoMedium"
-      tools:text="Update your downloaded maps"
+      tools:text="@string/whats_new_auto_update_title"
       tools:targetApi="jelly_bean"/>
-
     <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -42,8 +39,7 @@
       android:textAppearance="@style/MwmTextAppearance.Body1.Secondary"
       android:layout_gravity="center_horizontal"
       android:gravity="center_horizontal"
-      android:text="@string/update_maps_notice"/>
-
+      android:text="@string/whats_new_auto_update_message"/>
     <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -61,7 +57,7 @@
         android:background="?accentButtonBackground"
         android:gravity="center"
         android:visibility="gone"
-        tools:text="Update (203 MB)"
+        tools:text="@string/whats_new_auto_update_button_size"
         tools:visibility="visible"/>
       <ProgressBar
         android:id="@+id/progress"
@@ -81,7 +77,6 @@
       android:layout_gravity="center_horizontal"
       android:gravity="center"
       android:background="?clickableBackground"
-      tools:text="Manually update later"/>
+      tools:text="@string/whats_new_auto_update_button_later"/>
   </LinearLayout>
-
 </com.mapswithme.maps.widget.HeightLimitedFrameLayout>
