--- a/android/res/values/donottranslate.xml
+++ b/android/res/values/donottranslate.xml
@@ -44,6 +44,8 @@
   <string name="pref_tts_enabled" translatable="false">TtsEnabled</string>
   <string name="pref_tts_language" translatable="false">TtsLanguage</string>
   <string name="pref_tts_info" translatable="false">TtsInfo</string>
+  <string name="pref_tts_info_link" translatable="false">TtsInfoLink</string>
+  <string name="tts_info_link" translatable="false">https://support.maps.me/hc/en-us/articles/208628985-How-can-I-check-TTS-settings-on-my-Android-device-</string>
   <string name="pref_autodownload" translatable="false">AutoDownloadMap</string>
   <string name="pref_3d" translatable="false">3D</string>
   <string name="pref_3d_buildings" translatable="false">3DBuildings</string>
