--- a/android/res/xml/prefs_main.xml
+++ b/android/res/xml/prefs_main.xml
@@ -137,6 +137,13 @@
         android:enabled="false"
         android:summary="@string/prefs_languages_information"
         android:order="3"/>
+      <Preference
+        android:key="@string/pref_tts_info_link"
+        android:selectable="true"
+        android:persistent="false"
+        android:enabled="true"
+        android:summary="@string/prefs_languages_information_off_link"
+        android:order="4"/>
     </android.support.v7.preference.PreferenceScreen>
   </android.support.v7.preference.PreferenceCategory>
 
