--- a/android/res/values/themes-base.xml
+++ b/android/res/values/themes-base.xml
@@ -101,6 +101,8 @@
 
     <item name="localAdSearchResBackground">@color/search_local_ads_customer_result</item>
     <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+
+    <item name="tagBackground">@drawable/bg_tag</item>
   </style>
 
   <!-- Night theme -->
@@ -204,6 +206,7 @@
     <item name="warmGray">@color/warm_gray_night</item>
 
     <item name="localAdSearchResBackground">@color/search_local_ads_customer_result_night</item>
-    <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+
+    <item name="tagBackground">@drawable/bg_tag_night</item>
   </style>
 </resources>
