--- a/android/res/drawable/divider_transparent_quarter.xml
+++ b/android/res/drawable/divider_transparent_quarter.xml
@@ -2,6 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
   <size android:width="@dimen/margin_quarter"
         android:height="@dimen/margin_quarter"/>
-  <!--<solid android:color="@android:color/transparent"/>-->
-  <solid android:color="@android:color/black"/>
+  <solid android:color="@android:color/transparent"/>
 </shape>
