--- a/android/res/values/dimens.xml
+++ b/android/res/values/dimens.xml
@@ -184,8 +184,7 @@
   <dimen name="hotels_filter_padding">128dp</dimen>
 
   <dimen name="margin_dialog_title">20dp</dimen>
-  <!-- Fab elevation-->
-  <dimen name="fab_elevation">8dp</dimen>
 
-  <dimen name="action_bar_extended_height">72dp</dimen>
+  <!-- Hotel silters-->
+  <dimen name="hotel_filters_tag_height">32dp</dimen>
 </resources>
