--- a/android/res/layout/place_page_local_ad.xml
+++ b/android/res/layout/place_page_local_ad.xml
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/ll__place_editor"
+  android:id="@+id/ll__local_ad"
   style="@style/PlacePageItemFrame"
+  tools:showIn="@layout/place_page_details"
   tools:visibility="visible">
   <TextView
-    android:id="@+id/tv__editor"
+    android:id="@+id/tv__local_ad"
     style="@style/PlacePageMetadataText.Button"
     android:gravity="center"
-    android:text="@string/edit_place"/>
+    android:text="@string/placepage_add_place_button"/>
 </LinearLayout>
