[android] New type circle button for Filter

--- a/android/res/values/themes-base.xml
+++ b/android/res/values/themes-base.xml
@@ -51,6 +51,7 @@
     <item name="buttonDialogTextColor">@color/base_accent</item>
 
     <item name="accentButtonBackground">@drawable/button_accent</item>
+    <item name="accentButtonRoundBackground">@drawable/button_accent_round</item>
     <item name="accentButtonTextColor">@color/button_accent_text</item>
     <item name="accentButtonTextColorDisabled">@color/button_accent_text_disabled</item>
 
@@ -157,6 +158,7 @@
     <item name="buttonDialogTextColor">@color/base_accent_night</item>
 
     <item name="accentButtonBackground">@drawable/button_accent_night</item>
+    <item name="accentButtonRoundBackground">@drawable/button_accent_round_night</item>
     <item name="accentButtonTextColor">@color/button_accent_text_night</item>
     <item name="accentButtonTextColorDisabled">@color/button_accent_text_disabled_night</item>
 
