--- a/android/res/values/themes-attrs.xml
+++ b/android/res/values/themes-attrs.xml
@@ -40,6 +40,7 @@
     <attr name="buttonDialogTextColor" format="color"/>
 
     <attr name="accentButtonBackground" format="reference"/>
+    <attr name="accentButtonRoundBackground" format="reference"/>
     <attr name="accentButtonTextColor" format="color"/>
     <attr name="accentButtonTextColorDisabled" format="color"/>
 
